add some changes to the header

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             <!-- header menu -->
             <div class="header_menu header_perant">
                 <div class="header_menu_content header_perant_content">
-                    <i class="fas fa-mug-hot"></i>
-                    <span>Drink menu</span>
+                    <a href="#iced_coffee">
+                        <i class="fas fa-mug-hot"></i>
+                        <span>Drink menu</span>
+                    </a>
                 </div>
             </div>
 
