--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe</title>
+    <link rel="icon" href="images/icon-cafe2.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
 </head>
